<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn ="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_FBItems"
            android:icon="@drawable/baseline_liquor_24"
            android:title="@string/menu_fbitems" />
        <item
            android:id="@+id/nav_FBClients"
            android:icon="@drawable/baseline_groups_24"
            android:title="@string/menu_fbclients" />
        <item
            android:id="@+id/nav_FBSales"
            android:icon="@drawable/baseline_point_of_sale_24"
            android:title="@string/menu_fbsales" />

    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/test">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_items"
                        android:icon="@drawable/baseline_shopping_cart_24"
                        android:title="@string/menu_items" />
                    <item
                        android:id="@+id/nav_companies"
                        android:icon="@drawable/ic_menu_companies"
                        android:title="@string/menu_companies" />
                    <item
                        android:id="@+id/nav_transactions"
                        android:icon="@drawable/ic_menu_transactions"
                        android:title="@string/menu_transactions" />
                </group>
            </menu>
        </item>
    </group>


</menu>